Migrate remaining code to primitives where possible; tidying StringUtils imports for clarity